fix(landing): svg logo overflow

--- a/styles.scss
+++ b/styles.scss
@@ -159,11 +159,6 @@ p {
     width: 100%;
 }
 
-@media (max-width: 992px) and (max-width: 1199px) {
-    .logo svg {
-        margin: 0 20px;
-    }
-}
 /* MD */
 @media (min-width: 992px) and (max-width: 1199px) {
 }
